syntax = "proto3";

package golem.worker;

import "golem/common/account_id.proto";
import "golem/worker/worker_id.proto";
import "golem/worker/worker_status.proto";
import "google/protobuf/timestamp.proto";

message WorkerMetadata {
  WorkerId worker_id = 1;
  golem.common.AccountId account_id = 2;
  repeated string args = 3;
  map<string, string> env = 4;
  WorkerStatus status = 5;
  uint64 template_version = 6;
  uint64 retry_count = 7;
  uint64 pending_invocation_count = 8;
  uint64 pending_update_count = 9;
  repeated FailedUpdate failed_updates = 10;
  repeated SuccessfulUpdate successful_updates = 11;
  google.protobuf.Timestamp created_at = 12;
  optional string last_error = 13;
}

message FailedUpdate {
  google.protobuf.Timestamp timestamp = 1;
  uint64 target_version = 2;
  optional string details = 3;
}

message SuccessfulUpdate {
  google.protobuf.Timestamp timestamp = 1;
  uint64 target_version = 2;
}
